Fix issues with different browser widths on Mac OS and z-index issues with the mobile menu and the login button

--- a/orcid-web/src/main/webapp/static/css/orcid.resp.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.resp.css
@@ -3152,7 +3152,7 @@ ul.personal-inf-display li{
 		position: absolute;
 		width: 50%;
 		height: auto;
-		z-index: 3;
+		z-index: 1002;
 		top: 50px;
 	}
 	.header .navigation>.menu>li {
